# fastpub

./: .env.example  .gitignore  .impeccable.md  Makefile  README.md  pyproject.toml
.github/: copilot-instructions.md
.superpowers/brainstorm/8354-1779789540/content/: architecture-proposal.html  design-1-dataflow-v2.html  (+9 more)
docs/superpowers/plans/: 2026-05-26-video-generation.md  2026-05-27-warm-serif-theme.md
docs/superpowers/specs/: 2026-05-26-video-generation-design.md  2026-05-27-warm-serif-theme-design.md
examples/: 3772318.3790905.slides.html  ijmr-2026-1-e73151.html  ijmr-2026-1-e73151.slides.html
fastpub/: config.py  models.py
fastpub/ai/: tts.py
fastpub/ai/image_providers/: __init__.py  base.py  xai.py
fastpub/cli/: main.py
fastpub/pipeline/: analyze.py  image_gen.py  parse_pdf.py  scene_script.py  translate.py  utils.py
fastpub/prompts/: __init__.py
fastpub/prompts/paper_to_document/: system.txt  user.txt
fastpub/prompts/paper_to_slides/: system.txt  user.txt
fastpub/prompts/paper_to_web/: system.txt  user.txt
fastpub/prompts/scene_script/: system.txt  user.txt
fastpub/prompts/slide_content/: system.txt  user.txt
fastpub/prompts/slide_narration/: system.txt  user.txt
fastpub/prompts/translate_to_chinese/: system.txt  user.txt
fastpub/prompts/visual_simplify/: system.txt  user.txt
fastpub/render/: slides.py  theme.py  video.py  web.py
fastpub/render/templates/: paper.html
tests/: test_image_gen.py  test_image_provider.py  test_scene_script.py  test_slide_render.py  test_theme.py  test_video_manifest.py  test_web_render.py
(+1 files in other folders)
