[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastpub"
version = "0.1.0"
description = "Transform academic papers into promotional multimedia materials"
authors = [{ name = "QoriZii" }]
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "xai-sdk",
    "python-dotenv>=1.0",
    "pymupdf>=1.24",
    "httpx>=0.27",
]

[project.scripts]
fastpub = "fastpub.cli.main:app"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
